Fix text overflow in sidebar

--- a/lib-less/_helpers.less
+++ b/lib-less/_helpers.less
@@ -391,6 +391,8 @@ flexibility with non-UL elements */
     line-height: @line-height-base;
     color: @dropdown-link-color;
     white-space: nowrap; // prevent links from randomly breaking onto new lines
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 
     &.active {
       font-weight: bold;
